Fix menu bar link position on small devices
- Add min-height to entrie detail container

--- a/static_workspace/scss/modules/_detail.scss
+++ b/static_workspace/scss/modules/_detail.scss
@@ -45,7 +45,7 @@
   }
 
   .news-container__entrie {
-    min-height: inherit;
+    min-height: 77px;
 
     &-detail {
       padding-bottom: 30px;
